config google analytics

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,4 +9,4 @@ plugins:
 
 # Navigation
 show_downloads: false
-google_analytics: # Add your Google Analytics tracking ID here if needed 
+google_analytics: G-BJK1QW103V
